force-app/main/default/objects/RTL_Product_Outbound_Mapping__mdt/RTL_Product_Outbound_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Retail Product Outbound Mapping</label>
    <pluralLabel>Retail Product Outbound Mapping</pluralLabel>
</CustomObject>