force-app/main/default/objects/RTL_Product_Outbound_Mapping__mdt/fields/RTL_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>RTL_Contact_Method__c</fullName>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Me Now</fullName>
            </value>
            <value>
                <fullName>Call Me Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>