force-app/main/default/objects/RTL_Product_Outbound_Mapping__mdt/fields/RTL_Lead_Campaign_Outbound__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Campaign_Outbound__c</fullName>
    <label>Lead Campaign Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>callmenow_card</fullName>
            </value>
            <value>
                <fullName>callmenow_card_later</fullName>
            </value>
            <value>
                <fullName>callmenow_loan</fullName>
            </value>
            <value>
                <fullName>callmenow_loan_later</fullName>
            </value>
            <value>
                <fullName>CMN_MF</fullName>
            </value>
            <value>
                <fullName>CMN_TSP</fullName>
            </value>
            <value>
                <fullName>CallMeNow_BA</fullName>
            </value>
            <value>
                <fullName>CallMeLater_BA</fullName>
            </value>
            <value>
                <fullName>CML_HL_kick_back_for_doctor</fullName>
            </value>
            <value>
                <fullName>callmenow_flashcard</fullName>
            </value>
            <value>
                <fullName>callmenow_flashcard_later</fullName>
            </value>
            <value>
                <fullName>callmenow_cyc</fullName>
            </value>
            <value>
                <fullName>callmenow_cyc_later</fullName>
            </value>
            <value>
                <fullName>callmenow_cyb</fullName>
            </value>
            <value>
                <fullName>callmenow_cyb_later</fullName>
            </value>
            <value>
                <fullName>callmenow_new</fullName>
            </value>
            <value>
                <fullName>callmenow_new_later</fullName>
            </value>
            <value>
                <fullName>callmenow_used</fullName>
            </value>
            <value>
                <fullName>callmenow_used_later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>