force-app/main/default/objects/RTL_Product_Outbound_Mapping__mdt/fields/RTL_Lead_Channel_Outbound__c.field-meta.xml
<CustomField>
    <fullName>RTL_Lead_Channel_Outbound__c</fullName>
    <label>Lead Channel Outbound</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>web</fullName>
            </value>
            <value>
                <fullName>web_later</fullName>
            </value>
            <value>
                <fullName>CMN_web_Absolute</fullName>
            </value>
            <value>
                <fullName>CMN_web_Absolute_later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>