force-app/main/default/objects/RTL_Product_Outbound_Mapping__mdt/listViews/All_1.listView-meta.xml
<ListView>
    <fullName>All_1</fullName>
    <columns>MasterLabel</columns>
    <columns>RTL_Product_Name__c</columns>
    <columns>DeveloperName</columns>
    <columns>RTL_Contact_Method__c</columns>
    <columns>RTL_Lead_Campaign_Outbound__c</columns>
    <columns>RTL_Lead_Channel_Outbound__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>